--- a/app/src/main/res/layout/forgot_username_activity.xml
+++ b/app/src/main/res/layout/forgot_username_activity.xml
@@ -23,16 +23,10 @@
         android:id="@+id/sendUsername"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="106dp"
-        android:layout_marginLeft="106dp"
-        android:layout_marginTop="43dp"
-        android:layout_marginEnd="106dp"
-        android:layout_marginRight="106dp"
-        android:layout_marginBottom="329dp"
+        android:layout_marginTop="32dp"
         android:text="@string/send_username"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/emailEntryBox"
+        app:layout_constraintStart_toStartOf="@+id/emailEntryBox"
         app:layout_constraintTop_toBottomOf="@+id/emailEntryBox" />
 
     <ImageView
