--- a/app/src/main/res/layout/resource_activity.xml
+++ b/app/src/main/res/layout/resource_activity.xml
@@ -8,17 +8,11 @@
 
     <TextView
         android:id="@+id/resources"
-        android:layout_width="227dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginLeft="92dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="92dp"
-        android:layout_marginRight="92dp"
-        android:layout_marginBottom="660dp"
         android:text="@string/resources"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
