--- a/app/src/main/res/layout/forgot_username_activity.xml
+++ b/app/src/main/res/layout/forgot_username_activity.xml
@@ -14,10 +14,10 @@
         android:autofillHints=""
         android:hint="@string/email"
         android:inputType="text|textEmailAddress"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/care_corner_logo"
         app:layout_constraintHorizontal_bias="0.508"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintStart_toStartOf="@+id/care_corner_logo"
+        app:layout_constraintTop_toBottomOf="@+id/care_corner_logo" />
 
     <Button
         android:id="@+id/sendUsername"
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toBottomOf="@+id/emailEntryBox" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/care_corner_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
