--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -12,9 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:hint="@string/username"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/care_corner_logo"
+        app:layout_constraintStart_toStartOf="@+id/care_corner_logo"
+        app:layout_constraintTop_toBottomOf="@+id/care_corner_logo"
         android:inputType="text" />
 
     <EditText
@@ -39,7 +39,7 @@
         app:layout_constraintTop_toBottomOf="@+id/passwordEntryBox" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/care_corner_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
