--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -14,9 +14,9 @@
         android:hint="@string/username"
         android:importantForAutofill="no"
         android:inputType="text"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintEnd_toEndOf="@+id/care_corner_logo"
+        app:layout_constraintStart_toStartOf="@+id/care_corner_logo"
+        app:layout_constraintTop_toBottomOf="@+id/care_corner_logo" />
 
     <EditText
         android:id="@+id/passwordEntryBox"
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/emailEntryBox" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/care_corner_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
