--- a/care-corner-mobile/app/src/main/res/layout/fake_phone_call_menu_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/fake_phone_call_menu_activity.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FakePhoneCallMenuActivity">
+    tools:context=".Fake_Phone_Call_Menu_Activity">
 
     <TextView
-        android:id="@+id/fake_call_header_text"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -18,112 +18,66 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnCall"
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="@string/call"
-        app:layout_constraintEnd_toEndOf="@+id/fake_call_header_text"
-        app:layout_constraintStart_toStartOf="@+id/fake_call_header_text"
-        app:layout_constraintTop_toBottomOf="@+id/fake_call_header_text" />
-
-    <Button
-        android:id="@+id/btnRecordings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginRight="100dp"
-        android:text="@string/recordings"
-        app:layout_constraintEnd_toEndOf="@+id/spinnerVoiceSelector"
-        app:layout_constraintStart_toStartOf="@+id/spinnerVoiceSelector"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerVoiceSelector" />
-
-    <Button
-        android:id="@+id/btnSettings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/settings"
-        app:layout_constraintEnd_toEndOf="@+id/btnRecordings"
-        app:layout_constraintStart_toStartOf="@+id/btnRecordings"
-        app:layout_constraintTop_toBottomOf="@+id/btnRecordings" />
-
-    <EditText
-        android:id="@+id/nameEntryBox"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toEndOf="@+id/btnCall"
-        app:layout_constraintStart_toStartOf="@+id/btnCall"
-        app:layout_constraintTop_toBottomOf="@+id/btnCall"
-        android:hint="@string/name"
-        android:inputType="text" />
-
-    <EditText
-        android:id="@+id/phoneEntryBox"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:hint="@string/phone"
-        android:inputType="phone"
-        app:layout_constraintEnd_toEndOf="@+id/nameEntryBox"
-        app:layout_constraintStart_toStartOf="@+id/nameEntryBox"
-        app:layout_constraintTop_toBottomOf="@+id/nameEntryBox" />
-
-    <Spinner
-        android:id="@+id/spinnerWaitTime"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/phoneEntryBox"
-        app:layout_constraintStart_toStartOf="@+id/phoneEntryBox"
-        app:layout_constraintTop_toBottomOf="@+id/phoneEntryBox" />
-
-    <Spinner
-        android:id="@+id/spinnerVoiceSelector"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/spinnerWaitTime"
-        app:layout_constraintStart_toStartOf="@+id/spinnerWaitTime"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerWaitTime" />
-
-    <TextView
-        android:id="@+id/textSelectVoice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/select_voice"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/btnSet"
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginRight="100dp"
-        android:text="@string/set"
-        app:layout_constraintEnd_toEndOf="@+id/spinnerVoiceSelector"
-        app:layout_constraintStart_toStartOf="@+id/spinnerVoiceSelector"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerVoiceSelector" />
+        android:layout_marginTop="150dp"
+        android:text="@string/recordings"
+        app:layout_constraintEnd_toEndOf="@+id/editText3"
+        app:layout_constraintStart_toStartOf="@+id/editText3"
+        app:layout_constraintTop_toBottomOf="@+id/editText3" />
 
-    <TextView
-        android:id="@+id/textView"
+    <Button
+        android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginRight="160dp"
-        android:text="@string/waiting_time"
-        app:layout_constraintEnd_toEndOf="@+id/phoneEntryBox"
-        app:layout_constraintStart_toStartOf="@+id/phoneEntryBox"
-        app:layout_constraintTop_toBottomOf="@+id/phoneEntryBox" />
+        android:text="@string/settings"
+        app:layout_constraintEnd_toEndOf="@+id/button2"
+        app:layout_constraintStart_toStartOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="@+id/button"
+        app:layout_constraintStart_toStartOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        android:hint="@string/name"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="@+id/editText"
+        app:layout_constraintStart_toStartOf="@+id/editText"
+        app:layout_constraintTop_toBottomOf="@+id/editText"
+        android:hint="@string/phone"
+        android:inputType="phone" />
+
+    <EditText
+        android:id="@+id/editText3"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="@+id/editText2"
+        app:layout_constraintStart_toStartOf="@+id/editText2"
+        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        android:hint="@string/date"
+        android:inputType="date" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
