--- a/care-corner-mobile/app/src/main/res/layout/fake_phone_call_menu_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/fake_phone_call_menu_activity.xml
@@ -7,7 +7,7 @@
     tools:context=".Fake_Phone_Call_Menu_Activity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/fake_call_header_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -18,66 +18,92 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnCall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="@string/call"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintEnd_toEndOf="@+id/fake_call_header_text"
+        app:layout_constraintStart_toStartOf="@+id/fake_call_header_text"
+        app:layout_constraintTop_toBottomOf="@+id/fake_call_header_text" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnRecordings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginRight="100dp"
         android:text="@string/recordings"
-        app:layout_constraintEnd_toEndOf="@+id/editText3"
-        app:layout_constraintStart_toStartOf="@+id/editText3"
-        app:layout_constraintTop_toBottomOf="@+id/editText3" />
+        app:layout_constraintEnd_toEndOf="@+id/spinnerVoice"
+        app:layout_constraintStart_toStartOf="@+id/spinnerVoice"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerVoice" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnSettings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/settings"
-        app:layout_constraintEnd_toEndOf="@+id/button2"
-        app:layout_constraintStart_toStartOf="@+id/button2"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintEnd_toEndOf="@+id/btnRecordings"
+        app:layout_constraintStart_toStartOf="@+id/btnRecordings"
+        app:layout_constraintTop_toBottomOf="@+id/btnRecordings" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/nameEntryBox"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="@+id/btnCall"
+        app:layout_constraintStart_toStartOf="@+id/btnCall"
+        app:layout_constraintTop_toBottomOf="@+id/btnCall"
         android:hint="@string/name"
         android:inputType="text" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/phoneEntryBox"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toEndOf="@+id/editText"
-        app:layout_constraintStart_toStartOf="@+id/editText"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintEnd_toEndOf="@+id/nameEntryBox"
+        app:layout_constraintStart_toStartOf="@+id/nameEntryBox"
+        app:layout_constraintTop_toBottomOf="@+id/nameEntryBox"
         android:hint="@string/phone"
         android:inputType="phone" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/dateEntryBox"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toEndOf="@+id/editText2"
-        app:layout_constraintStart_toStartOf="@+id/editText2"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        app:layout_constraintEnd_toEndOf="@+id/phoneEntryBox"
+        app:layout_constraintStart_toStartOf="@+id/phoneEntryBox"
+        app:layout_constraintTop_toBottomOf="@+id/phoneEntryBox"
         android:hint="@string/date"
         android:inputType="date" />
+
+    <Spinner
+        android:id="@+id/spinnerVoice"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="24dp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="@+id/dateEntryBox"
+        app:layout_constraintStart_toStartOf="@+id/dateEntryBox"
+        app:layout_constraintTop_toBottomOf="@+id/dateEntryBox" />
+
+    <TextView
+        android:id="@+id/textSelectVoice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="160dp"
+        android:layout_marginRight="160dp"
+        android:text="@string/select_voice"
+        app:layout_constraintEnd_toEndOf="@+id/dateEntryBox"
+        app:layout_constraintStart_toStartOf="@+id/dateEntryBox"
+        app:layout_constraintTop_toBottomOf="@+id/dateEntryBox" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
