--- a/care-corner-mobile/app/src/main/res/layout/calling_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/calling_activity.xml
@@ -22,17 +22,23 @@
         android:id="@+id/CallerImageView"
         android:layout_width="101dp"
         android:layout_height="113dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="71dp"
+        android:layout_marginRight="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/incoming_call_text"
-        app:srcCompat="@drawable/default_caller_image" />
+        app:srcCompat="@drawable/default_caller_picture"
+        tools:layout_editor_absoluteX="123dp"
+        tools:layout_editor_absoluteY="78dp" />
 
     <TextView
         android:id="@+id/caller_id_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
         android:gravity="center"
         android:text="@string/caller_id"
         android:textColor="@android:color/black"
@@ -45,7 +51,9 @@
         android:id="@+id/phone_number_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
         android:text="@string/mobile"
         android:textColor="@android:color/black"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -67,7 +75,7 @@
         android:id="@+id/btnRejectCall"
         android:layout_width="106dp"
         android:layout_height="79dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="85dp"
         android:layout_marginRight="35dp"
         android:background="@null"
         app:layout_constraintRight_toRightOf="parent"
@@ -78,6 +86,7 @@
         android:id="@+id/send_message_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:paddingLeft="60dp"
         android:paddingTop="10dp"
