--- a/care-corner-mobile/app/src/main/res/layout/calling_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/calling_activity.xml
@@ -22,23 +22,17 @@
         android:id="@+id/CallerImageView"
         android:layout_width="101dp"
         android:layout_height="113dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="71dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginTop="70dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/incoming_call_text"
-        app:srcCompat="@drawable/default_caller_picture"
-        tools:layout_editor_absoluteX="123dp"
-        tools:layout_editor_absoluteY="78dp" />
+        app:srcCompat="@drawable/default_caller_image" />
 
     <TextView
         android:id="@+id/caller_id_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
         android:gravity="center"
         android:text="@string/caller_id"
         android:textColor="@android:color/black"
@@ -51,9 +45,7 @@
         android:id="@+id/phone_number_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
         android:text="@string/mobile"
         android:textColor="@android:color/black"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -75,7 +67,7 @@
         android:id="@+id/btnRejectCall"
         android:layout_width="106dp"
         android:layout_height="79dp"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="80dp"
         android:layout_marginRight="35dp"
         android:background="@null"
         app:layout_constraintRight_toRightOf="parent"
@@ -86,7 +78,6 @@
         android:id="@+id/send_message_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:paddingLeft="60dp"
         android:paddingTop="10dp"
