--- a/care-corner-mobile/app/src/main/res/layout/fake_phone_call_menu_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/fake_phone_call_menu_activity.xml
@@ -35,9 +35,9 @@
         android:layout_marginEnd="100dp"
         android:layout_marginRight="100dp"
         android:text="@string/recordings"
-        app:layout_constraintEnd_toEndOf="@+id/spinnerVoice"
-        app:layout_constraintStart_toStartOf="@+id/spinnerVoice"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerVoice" />
+        app:layout_constraintEnd_toEndOf="@+id/spinnerVoiceSelector"
+        app:layout_constraintStart_toStartOf="@+id/spinnerVoiceSelector"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerVoiceSelector" />
 
     <Button
         android:id="@+id/btnSettings"
@@ -83,7 +83,7 @@
         app:layout_constraintTop_toBottomOf="@+id/phoneEntryBox" />
 
     <Spinner
-        android:id="@+id/spinnerVoice"
+        android:id="@+id/spinnerVoiceSelector"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -110,9 +110,9 @@
         android:layout_marginEnd="100dp"
         android:layout_marginRight="100dp"
         android:text="@string/set"
-        app:layout_constraintEnd_toEndOf="@+id/spinnerVoice"
-        app:layout_constraintStart_toStartOf="@+id/spinnerVoice"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerVoice" />
+        app:layout_constraintEnd_toEndOf="@+id/spinnerVoiceSelector"
+        app:layout_constraintStart_toStartOf="@+id/spinnerVoiceSelector"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerVoiceSelector" />
 
     <TextView
         android:id="@+id/textView"
