--- a/app/src/main/res/layout/journal_menu_activity.xml
+++ b/app/src/main/res/layout/journal_menu_activity.xml
@@ -19,4 +19,19 @@
         app:layout_constraintHorizontal_bias="0.598"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnHome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="61dp"
+        android:layout_marginLeft="61dp"
+        android:layout_marginTop="37dp"
+        android:layout_marginEnd="209dp"
+        android:layout_marginRight="209dp"
+        android:text="@string/return_home"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/my_journal" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
