Add ability to save Journal Entries when moving to different activities, GSON dependency, and Bug Fixes.

--- a/app/src/main/res/layout/journal_entry_add_dialog.xml
+++ b/app/src/main/res/layout/journal_entry_add_dialog.xml
@@ -27,6 +27,9 @@
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/journal_name" />
+        app:layout_constraintTop_toBottomOf="@+id/journal_name"
+        android:overScrollMode="always"
+        android:scrollbarStyle="insideInset"
+        android:scrollbars="vertical" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
