--- a/app/src/main/res/layout/recyclerview_items_view.xml
+++ b/app/src/main/res/layout/recyclerview_items_view.xml
@@ -16,7 +16,8 @@
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:baselineAligned="false" />
 
     <Button
         android:id="@+id/btnDelete2"
