journal reader xml style updates

--- a/app/src/main/res/layout/journal_reader_activity.xml
+++ b/app/src/main/res/layout/journal_reader_activity.xml
@@ -9,11 +9,11 @@
 
     <TextView
         android:id="@+id/textBox"
-        android:layout_width="382dp"
-        android:layout_height="480dp"
+        android:layout_width="355dp"
+        android:layout_height="466dp"
         android:layout_marginStart="25dp"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="204dp"
         android:layout_marginEnd="25dp"
         android:layout_marginRight="25dp"
         android:hint="@string/journal_reader"
@@ -22,31 +22,35 @@
         android:scrollbarStyle="insideInset"
         android:scrollbars="vertical"
         android:singleLine="false"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnEdit"
-        android:layout_width="114dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="100dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginLeft="152dp"
+        android:layout_marginBottom="644dp"
         android:text="@string/edit_my_entry"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/title"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textBox"
+        app:layout_constraintVertical_bias="0.817" />
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="101dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="152dp"
-        android:layout_marginLeft="152dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="269dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginLeft="68dp"
+        android:layout_marginTop="80dp"
+        android:gravity="center"
         android:text="@string/title"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
